# new_crawler-Aayush_sharma

./: CMakeLists.txt  main.cpp
docs/build logs /july_18/: session1.md  session2.md  session3.md  session4.md
docs/build logs /july_20/: session1.md  session2.md  session3.md  session4.md
docs/build logs /july_21/: session1.md  session2.md
docs/build logs /july_22/: session1.md  session2.md
docs/dailylogs/: jult_20.md  july_18.md  july_21.md
docs/designproposal/: designpoposal.md
include/: base64.h  browser.h  crawler.h  frontier.h  minimalwebsocketclient.h  node.h  pageload.h  seekstore.h
src/: base64.tpp  browser.tpp  crawler.tpp  frontier.tpp  minimalwebsocket.tpp  minimalwebsocketclient.tpp  pageload.tpp  seekstore.tpp
